--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
+    "tailwind-styled-components": "^2.0.3",
     "typescript": "^4.5.2",
     "web-vitals": "^1.1.2"
   },
