--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^12.20.37",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "randomcolor": "^0.6.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
@@ -43,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "@types/randomcolor": "^0.5.6",
     "@types/styled-components": "^5.1.18",
     "autoprefixer": "^9.8.8",
     "postcss": "^7.0.39",
