--- a/package.json
+++ b/package.json
@@ -4,37 +4,22 @@
   "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "build": "tsc && vite build",
+    "test": "vitest"
   },
   "dependencies": {
     "randomcolor": "^0.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/randomcolor": "^0.5.6",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@types/styled-components": "^5.1.18",
+    "@types/uuid": "^9.0.0",
     "@vitejs/plugin-react": "^3.0.1",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
