--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "^5.3.3",
+    "tsyringe": "^4.7.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
@@ -23,6 +24,7 @@
     "@vitejs/plugin-react": "^3.0.1",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
+    "reflect-metadata": "^0.1.13",
     "tailwind-styled-components": "^2.2.0",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.3",
